2013-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-lnum.el (w3m-lnum-read-interactive): Replace w3m-scroll-up-1 with
	w3m-scroll-up.

	* w3m.el (w3m-scroll-up): Rename from w3m-scroll-up-1.
	(w3m-scroll-up, w3m-scroll-up-or-next-url): Make the bottom of a page
	border on the bottom of a screen when having finished scrolling
	the page up.
	(w3m-scroll-down): New function detached from
	w3m-scroll-down-or-previous-url.
	(w3m-scroll-down-or-previous-url): Move point to the top when having
	finished scrolling a page down.
	(w3m-mwheel-scroll-up, w3m-mwheel-scroll-down): New functions.
	(w3m-mode): Bind mwheel-scroll-(up,down)-function to
	w3m-mwheel-scroll-(up,down).
	Suggested by Dan Jacobson <jidanni@jidanni.org>.

2013-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Do (sit-for 0) to update the
	header-line appearance as a workaround; see the 2013-01-11 comment.
	(w3m-view-this-url-1): Revert 2010-01-15 change; don't popup new
	session if w3m-new-session-in-background is non-nil.
	Reported by Michael Heerdegen <michael_heerdegen@web.de>.

2012-12-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-do-search): Save history position.
	Reported by Dan Jacobson <jidanni@jidanni.org>.

2012-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-ems-create-image): Abolish.
	(w3m-image-animate-seconds): New user option.
	(w3m-image-animate): New function.
	(w3m-create-image): Use it.

	* w3m.el (w3m-resize-inline-image-internal): Use w3m-image-animate.

	* w3m-xmas.el (w3m-image-animate): Alias to identity.

2012-12-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-decode-anchor-string): Decode url used to next/prev/...
	cf. http://emacs-w3m.namazu.org/ml/msg11824.html

2012-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-flet): Rewrite it using cl-letf.

2012-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-labels): Revert; use cl-labels if available.
