@@ -6217,13 +6217,8 @@ called with t as an argument.  Otherwise, it will be called with nil."
 						(w3m-arrived-content-charset url)
 						(w3m-content-charset url))
 					    page-buffer)
-		      (w3m-force-window-update-later page-buffer)
+		      (w3m-force-window-update-later page-buffer 1e-9)
 		      (unless (get-buffer-window page-buffer)
-
-			;; Fixme: `w3m-force-window-update-later' doesn't seem
-			;; to work, so I put this here. -- ky 2013-01-11
-			(sit-for 0)
-
 			(w3m-message "The content (%s) has been retrieved in %s"
 				     url (buffer-name page-buffer))))))
 	      (ding)
